<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.admin.dashboard.DashboardAdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cocon"
                android:text="@string/dashboard"
                android:textStyle="bold"
                android:textColor="#FF5722"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:background="@drawable/bgg_button">
            </View>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cocon"
            android:text="@string/welcome"
            android:textColor="#5E5E5E"
            android:textSize="18sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/recycler_dashboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:selectableItemBackground"
                android:src="@drawable/yapan"
                android:scaleType="fitXY"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="Informasi Akademik"
                android:textColor="#FF5722"
                android:textStyle="bold"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:background="@drawable/bgg_button">
            </View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard_profil"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#80FF7F50"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cocon"
                        android:text="@string/profil_sekolah"
                        android:textStyle="bold"
                        android:textColor="#5E5E5E"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="1400dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_siswa" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard_staff"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#80FFA502"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cocon"
                        android:text="@string/staff_sekolah"
                        android:textStyle="bold"
                        android:textColor="#5E5E5E"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/icon_staf" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard_eskul"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#801E90FF"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cocon"
                        android:text="@string/guru_eskul"
                        android:textStyle="bold"
                        android:textColor="#5E5E5E"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/icon_guru" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard_jadwal"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#665352ED"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cocon"
                        android:text="@string/jadwal_pelajaran"
                        android:textStyle="bold"
                        android:textColor="#5E5E5E"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/icon_pelajaran" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard_kehadiran"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#802ED573"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cocon"
                        android:text="@string/kehadiran_siswa"
                        android:textStyle="bold"
                        android:textColor="#5E5E5E"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/icon_hadir" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard_prestasi"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#80FFA502"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cocon"
                        android:text="@string/prestasi_sekolah"
                        android:textStyle="bold"
                        android:textColor="#5E5E5E"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="140dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_prestasi" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>